[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/minigames/arena/arenaGame.gd" type="Script" id=1]
[ext_resource path="res://Scenes/minigames/arena/arenaMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Teko-Light.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/player/player.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/SettingsMenu/settingsMenu.tscn" type="PackedScene" id=7]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( -48.9833, -45.9201, -50.0482, 47.9166, -50.0482, 47.9166, 50.0482, 46.9184, 50.0482, 46.9184, 48.9833, -48.9149, 47.9185, -50.9114 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 3 )

[node name="arenaGame" type="Control"]
script = ExtResource( 1 )

[node name="ArenaMap" parent="." instance=ExtResource( 2 )]

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 832, 1344 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Player"]
occluder = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="GUI" type="CanvasLayer" parent="."]

[node name="SettingsMenu" parent="GUI" instance=ExtResource( 7 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = -640.0
margin_bottom = -360.0

[node name="Timer" type="Timer" parent="GUI"]

[node name="timerText" type="Label" parent="GUI/Timer"]
margin_left = 612.0
margin_top = 10.0
margin_right = 656.0
margin_bottom = 68.0
custom_colors/font_color = Color( 0, 1, 0.203922, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
